fixxed tag spacing

--- a/src/components/main/tagsList/tagsList.css
+++ b/src/components/main/tagsList/tagsList.css
@@ -1,16 +1,27 @@
 .tags-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 -10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
 }
 
 .tag-box {
-    flex: 0 0 calc(50.33% - 10px);
-    box-sizing: border-box;
-    text-align: center;
-    margin: 0 10px 20px;
+    min-width: 100px;
+    min-height: 80px;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: 1px dotted #ccc;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px; /* Rounds the corners */
+}
+
+.tag-link {
+    text-decoration: none;
+    color: #333;
+}
+
+.tag-box p {
+    margin: 0;
 }
